recursion.lessons.recursion.koch.Koch.scala.error
Koch:4: error: ')' expected but ';' found.
avance(length);
              ^